enhancement(all): moving luaj to java 11 in order to avoid future removal of some java 8 methods