@@ -46,7 +46,7 @@ class LuaJavaCoercionTest {
 		assertEquals(777, ((Number) o).intValue());
 		o = CoerceLuaToJava.coerce(i, Integer.class);
 		assertEquals(Integer.class, o.getClass());
-		assertEquals(new Integer(777), o);
+		assertEquals(Integer.valueOf(777), o);
 	}
 
 	@Test
@@ -208,7 +208,7 @@ class LuaJavaCoercionTest {
 	@Test
 	void testMatchIntArgs() {
 		LuaValue v = CoerceJavaToLua.coerce(new SampleClass());
-		LuaValue arg = CoerceJavaToLua.coerce(new Integer(123));
+		LuaValue arg = CoerceJavaToLua.coerce(Integer.valueOf(123));
 		LuaValue result = v.method("sample", arg);
 		assertEquals("int-args 123", result.toString());
 	}
